# test-library-python-poetry

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.cid/: state-github.json  state-gitlab.json
.github/workflows/: cid-main.yml  cid-nightly.yml  cid-pull-request.yml  cid-release.yml
tests/: test_calculator.py
